# client-tools

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  PROGRESS.md  dbg-d3d9-entry.cmd  dbg-d3d9-entry.txt  dbg-d3d9-swgsource.cmd  dbg-d3d9.cmd
.planning/: MILESTONES.md  PROJECT.md  RENDER-PATH-REFERENCE.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v2.1-MILESTONE-AUDIT.md  v2.2-MILESTONE-AUDIT.md
.planning/handoff/: 2026-06-02-boot-crash-resolved-cape-next.md  2026-06-03-cape-spike-ring-investigation.md  2026-06-05-cape-spike-race-confirmed-serialization-test.md  2026-06-07-cape-spike-LIVE-ONLY-undefined-memory-reframe.md  2026-06-07-cape-spike-softskin-ring-discard-renderdoc-next.md  2026-06-08-black-walls-fixed-faces-too-light-next.md  2026-06-08-spike-fixed-lighting-parity-buildings-next.md  2026-06-09-blue-face-FIXED-sticky-light-magenta-next.md  2026-06-11-cantina-parity-COMPLETE-rendering-bug-list-next.md  2026-06-11-face-FIXED-texren-bake-walls-untextured-next.md  2026-06-12-phase-24-COMPLETE-dpvs-gate-portability-next-phase-25.md  2026-06-15-utinni-dx11-hookpoint-advertisement-spec.md  2026-06-20-32bit-and-zonein-optimizations.md  2026-06-20-32bit-cantina-leak-NEXT.md  2026-06-20-cantina-door-snap-FIX-COMPLETE.md  2026-06-20-cantina-door-snap-spike-START.md  2026-06-20-utinni-engine-entrypoint-advertisement-spec.md  2026-06-22-utinni-advertised-client-coverage-status.md  2026-06-22-utinni-detour-vs-call-followup.md  2026-06-22-utinni-dx11-advertised-client-gap.md  2026-06-22-utinni-dx11-embed-resize-debug-plan.md  2026-06-22-utinni-provider-coverage-handback.md  2026-06-23-cuimediator-garbagecollect-reentrancy-fix.md  2026-06-23-enginehook-rename-provider-handback.md  2026-06-23-gl11-crash-dump-is-stale-not-s1.md  2026-06-23-gl11-embed-rescale-ui-relayout-and-poll.md  2026-06-23-gl11-injected-startup-AB-and-firstpresent-gate.md  2026-06-23-gl11-injected-startup-norender-resize-deferral-fix.md  2026-06-23-hud-deactivate-null-guard.md  2026-06-23-session-handoff-utinni-and-crashfixes.md  2026-06-23-tatooine-texture-crash-guard.md  2026-06-23-utinni-detour-entries-fixed.md  2026-06-23-utinni-dx11-resize-and-teardown-followup.md  2026-06-23-utinni-provider-followup-2.md  2026-06-24-utinni-misc-input-editor-unlock-HANDBACK.md  2026-06-24-utinni-misc-input-editor-unlock.md  2026-06-24-utinni-treefile-enum-and-inworld-reflow-HANDBACK.md  2026-06-24-utinni-treefile-enum-and-inworld-reflow.md  2026-06-25-editor-scene-load-arc-COMPLETE.md  2026-06-25-utinni-editor-load-loading-screen-stuck-consult.md  (+31 more)
.planning/milestones/: v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v2.1-MILESTONE-AUDIT.md  v2.1-REQUIREMENTS.md  v2.2-REQUIREMENTS.md  v2.2-ROADMAP.md  v2.3-MILESTONE-AUDIT.md  v2.3-REQUIREMENTS.md  v2.3-ROADMAP.md  v3.0-MILESTONE-AUDIT.md  v3.0-REQUIREMENTS.md  v3.0-ROADMAP.md
.planning/phases/09-stlport-msvc-stl/baseline/: BEFORE-STL.txt  CMakeLists.txt  FirstValidationHelpers.cpp  FirstValidationHelpers.h  after-imports-replan3.txt  before-crc.txt  before-datatable-round-trip.txt  before-imports-replan2.txt  before-imports-replan3.txt  before-runtime.txt  before-sort-stability.txt  boost-smoke-test.cpp  capture-before-stl.sh  compile-boost-smoke.bat  datatable_round_trip.cpp  dll-baseline-2016.txt  known-strings.txt  sort_stability_dump.cpp  std_hash_dump.cpp  stlcompat-consumer-probe.ps1  warnings-wave-1.txt  wave1-3rd-stl-surface.txt  wave1-auto-ptr-usage.txt  wave1-boost-smoke.txt  wave1-ours-stl-surface.txt  wave1-stlcompat-consumers.txt
.planning/research/: ARCHITECTURE.md  CONSULT-17-06b-casec-codex.out  CONSULT-17-06b-casec-cursor.out  CONSULT-17-07-gap4-cbuffer-reconcile-codex.out  CONSULT-17-07-gap4-cbuffer-reconcile-cursor.out  CONSULT-17-07-gap4-cbuffer-reconcile.md  CONSULT-17-08-gap6-tangent-basis-codex.out  CONSULT-17-08-gap6-tangent-basis-cursor.out  CONSULT-17-08-gap6-tangent-basis.md  CONSULT-17-09-vs-texcoord-set-key-SYNTHESIS.md  CONSULT-17-09-vs-texcoord-set-key-codex.out  CONSULT-17-09-vs-texcoord-set-key-cursor.out  CONSULT-17-09-vs-texcoord-set-key.md  CONSULT-18-half-texel-seam-SYNTHESIS.md  CONSULT-18-half-texel-seam-codex.out  CONSULT-18-half-texel-seam-cursor.out  CONSULT-18-half-texel-seam.md  CONSULT-19-d3d11-world-corruption-ROUND2-SYNTHESIS.md  CONSULT-19-d3d11-world-corruption-ROUND2-codex.out  (+331 more)
docs/: animation.html  architecture.html  boot-sequence.html  build.html  build.md  client.html  data-pipeline.html  dependencies.html  foliage.html  gaps.html  glossary.html  index.html  middleware.html  research.html  reverse-engineering-resources.html  run-locally.html  scripting.html  servers.html  style.css  swgclient-build.html
tools/tre-compare/: .gitignore  README.md  installs.toml.example  pyproject.toml
tools/tre-compare/src/tre_compare/: __init__.py  __main__.py  api.py  cache.py  config.py  diff.py  scanner.py  virtual_tree.py  web_static.py
tools/tre-compare/src/tre_compare/parser/: __init__.py  tre_decrypt.py  tre_reader.py
tools/tre-compare/tests/: _fixtures.py  conftest.py  test_api.py  test_cache.py  test_diff.py  test_integration.py  test_parser.py  test_scaffold.py  test_scanner.py  test_virtual_tree.py  test_web_static.py
tools/tre-compare/web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
tools/tre-compare/web/src/: App.tsx  index.css  main.tsx
tools/tre-compare/web/src/components/: DetailPanel.tsx  FileTree.tsx  InstallPicker.tsx  SetDeltaStrip.tsx  StatusBadge.tsx  SummaryStats.tsx
tools/tre-compare/web/src/lib/: api.ts  placeholder.test.ts  status.test.ts  status.ts  tree.test.ts  tree.ts  types.ts
(+1614 files in other folders)
